[package]
name = "tunebox"
version = "0.1.0"
edition = "2021"
authors = ["Himanshu Dubey <hdubey261102@gmail.com>"]
description = "A beautiful terminal music player with album art and audio visualizer"
license = "MIT"
repository = "https://github.com/himanshud2611/tunebox"
homepage = "https://github.com/himanshud2611/tunebox"
readme = "README.md"
keywords = ["music", "player", "terminal", "tui", "audio"]
categories = ["multimedia::audio", "command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
rodio = "0.19"
lofty = "0.21"
image = "0.25"
rustfft = "6"
crossbeam-channel = "0.5"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
chrono = "0.4"
rand = "0.8"
anyhow = "1"
tiny_http = "0.12"

[profile.release]
opt-level = 3
lto = true
